--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "vite": "^5.2.10",
     "vite-plugin-pwa": "^0.20.0",
+    "vite-plugin-svgr": "^4.2.0",
     "workbox-core": "^7.1.0",
     "workbox-window": "^7.1.0"
   },
